[feat] Implements ability to reserve spaces

--- a/client/js/map/mapTemplate.html
+++ b/client/js/map/mapTemplate.html
@@ -8,6 +8,7 @@
 
   <footer class="map-footer">
     <button class="map-link another-spot">show me another spot</button>
+    <button class="map-link reserve-spot">reserve this spot</button>
     <button class="map-link change-destination">enter another destination</button>
   </footer>
 </section>
