--- a/client/js/map/mapTemplate.html
+++ b/client/js/map/mapTemplate.html
@@ -8,7 +8,8 @@
 
   <footer class="map-footer">
     <button class="map-link another-spot">show me another spot</button>
-    <button class="map-link reserve-spot">reserve this spot</button>
+    <button class="map-link parking-lot">show me a parking lot</button>
     <button class="map-link change-destination">enter another destination</button>
+    <button class="map-link reserve-spot">reserve this spot</button>
   </footer>
 </section>
