[fix] Clear fix

--- a/client/js/map/mapTemplate.html
+++ b/client/js/map/mapTemplate.html
@@ -7,13 +7,13 @@
   </div>
 
   <footer class="map-footer">
-  <div class="">
+  <div class="" style="clear: both;">
     <button class="map-link another-spot">show me another spot</button>
     <button class="map-link parking-lot">show me a parking lot</button>
   </div>
-  <div class="">
-    <button class="map-link change-destination">enter a destination</button>
+  <div class="" style="clear: both;">
     <button class="map-link reserve-spot">reserve this spot</button>
+    <button class="map-link change-destination">enter a destination</button>
   </div>
   </footer>
 </section>
