--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,10 @@
 <body ng-app="ParkAssist">
 
   <div class="container">
-    <img style="float:right;" src="../../img/legend.png" width="256px" height="128px" alt="Legend">
-    <img class="main-title" src="img/ParkAssistLogo.png" alt="Park Assist - Santa Monica">
+    <div class="header">
+      <img class="legend" src="../../img/legend.png" width="256px" height="128px" alt="Legend">
+      <img class="main-title" src="img/ParkAssistLogo.png" alt="Park Assist - Santa Monica">
+    </div>
     
     <map></map>
 
