--- a/client/js/map/mapTemplate.html
+++ b/client/js/map/mapTemplate.html
@@ -1,19 +1,20 @@
 <section class="map-container">
   <div id="map-canvas"></div>
 
-  <div class="loading">
-    <p class="loading-text"></p>
+  <div class="loading" ng-class="{'show': map.isLoading}">
+    <p class="loading-text" ng-bind="map.loadingText"></p>
     <div class="hexdots-loader"></div>
   </div>
 
   <footer class="map-footer">
   <div class="" style="clear: both;">
-    <button class="map-link another-spot">show me another spot</button>
-    <button class="map-link parking-lot">show me a parking lot</button>
+    <button class="map-link another-spot" ng-click="map.findSpot()">show me another spot</button>
+    <button class="map-link parking-lot" ng-click="map.findLot()">show me a parking lot</button>
   </div>
   <div class="" style="clear: both;">
-    <button class="map-link reserve-spot">reserve this spot</button>
-    <button class="map-link change-destination">enter a destination</button>
+    <button class="map-link reserve-spot" ng-click="map.reserveSpot()">reserve this spot</button>
+    <button class="map-link change-destination" ng-click="map.openModal()">enter another destination</button>
   </div>
   </footer>
 </section>
+
